feat: adding database support

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-spring.data.mongodb.database=
+spring.datasource.url=jdbc:postgresql://localhost:5001/animanager
+spring.datasource.username=animanager
+spring.datasource.password=animanagerserver
