--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+spring.profiles.active=test
+spring.jpa.open-in-view=true
 spring.datasource.url=jdbc:postgresql://localhost:5001/animanager
 spring.datasource.username=animanager
 spring.datasource.password=animanagerserver
