--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -47,4 +47,4 @@ jobs:
       uses: docker/build-push-action@v4
       with:
         push: true
-        tags: medzdev/docker101tutorial
+        tags: medzdev/animanager
